Home: fix buttons visibility

--- a/my-app/src/components/HomePage/HomePage.css
+++ b/my-app/src/components/HomePage/HomePage.css
@@ -56,6 +56,7 @@
 .home-page .p-datatable button {
     color: white;
     border: none;
+    -webkit-text-stroke: 0px;
 }
 
 .home-page .p-datatable button:hover,
@@ -121,9 +122,9 @@
 }
 
 .home-page span[class*='p-button-icon p-c pi pi-trash'] {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
 }
 
 .home-page span[class*='p-button-icon p-c pi pi-pencil'] {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
 }
